add form styling

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
   font-family: "Space Mono", monospace;
   text-transform: capitalize;
+  font-size: 20px;
+  color: #1e293b;
 }
 @import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&family=Space+Mono&display=swap");
 
@@ -27,12 +29,13 @@ body {
   align-items: center;
   gap: 1rem;
 
-  color: #f8fafc;
   background-color: #1e293b;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
-.header h1 {
+.header h1,
+.header i {
+  color: #f8fafc;
   font-size: 50px;
 }
 
@@ -43,21 +46,71 @@ body {
 }
 /* FORM */
 
+.form-container {
+  background-color: #cbd5e1;
+  width: 350px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-container h2 {
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+h2 {
+  font-size: 25px;
+  letter-spacing: 2px;
+}
+
+h2 i {
+  font-size: 32px;
+}
+
+h2 i:hover {
+  transform: scale(1.2);
+}
+
 form {
   display: flex;
   flex-direction: column;
-  width: 300px;
-  padding: 20px;
 
-  background-color: #cbd5e1;
+  font-size: 20px;
+
+  gap: 10px;
 }
 
+form fieldset {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  border: 2px solid #1e293b;
+}
 form .input-fieldset {
   display: flex;
   flex-direction: column;
   border: 0;
+  gap: 10px;
 }
 
+.todo-input-btn {
+  font-size: 32px;
+  font-weight: 800;
+  text-transform: uppercase;
+  background-color: #22c55e;
+}
+
+.todo-input-btn:hover {
+  color: #22c55e;
+  background-color: #1e293b;
+}
+
+.show-form {
+  height: 0;
+  overflow: hidden;
+}
 /* MISC BAR */
 .misc-bar {
   display: flex;
@@ -108,12 +161,18 @@ select#sort {
 
 .todo {
   width: 100%;
+  padding: 5px 20px;
+  border: 2px solid #1e293b;
+  border-radius: 20px;
   font-size: 20px;
   overflow-wrap: break-word;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 10px;
+
+  background-color: #cbd5e1;
 }
 
 .others-info {
